--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
 PORT = 3001
-DATABASE_URL="postgresql://username:pass@localhost:5432/db-name"
-SECRET_KEY=""
+DATABASE_URL="postgresql://postgres:pass@localhost:5432/name"
+SECRET_KEY="Secret"
