--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,10 @@
 {
   "include": [
-    "/src/**/*"
+    "./src/*",
+    "./src/**/*"
+  ],
+  "exclude": [
+    "./dist"
   ],
   "compilerOptions": {
     /* Visit https://aka.ms/tsconfig to read more about this file */
