--- a/.example.env
+++ b/.example.env
@@ -1,3 +1,5 @@
+NODE_ENV=development
 PORT = 3001
 DATABASE_URL="postgresql://postgres:pass@localhost:5432/name"
 SECRET_KEY="Secret"
+SENTRY_DSN="dsn
