--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
-    "build": "npx tsc",
-    "start": "node dist/main.js",
-    "test": "jest",
-    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/main.js\""
+    "build": "npx tsc && npm run sentry:sourcemaps",
+    "start": "dotenvx run -- node dist/main.js",
+    "test": "NODE_ENV=test jest",
+    "dev": "concurrently \"npx tsc --watch\" npm run sentry:sourcemaps \"dotenvx run -- nodemon -q dist/main.js\"",
+    "sentry:sourcemaps": "sentry-cli sourcemaps inject --org arfandy --project node-express ./dist && sentry-cli sourcemaps upload --org arfandy --project node-express ./dist"
   },
   "jest": {
     "transform": {
@@ -21,7 +22,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@dotenvx/dotenvx": "^1.9.0",
     "@prisma/client": "^5.18.0",
+    "@sentry/cli": "^2.33.1",
+    "@sentry/node": "^8.26.0",
+    "@sentry/profiling-node": "^8.26.0",
     "@types/supertest": "^6.0.2",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
@@ -34,6 +39,7 @@
     "jsonwebtoken": "^9.0.2",
     "supertest": "^7.0.0",
     "uuid": "^10.0.0",
+    "winston": "^3.14.2",
     "zod": "^3.23.8"
   },
   "devDependencies": {
