--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -49,4 +49,5 @@ jobs:
         env:
           DATABASE_URL: postgresql://postgres:postgres@localhost:5432/postgres
           SECRET_KEY: Th1sS3cR3T
+          NODE_ENV: test
 
