--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
-    "build": "npx tsc",
-    "start": "node dist/main.js",
-    "test": "jest",
-    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/main.js\""
+    "build": "npx tsc && npm run sentry:sourcemaps",
+    "start": "dotenvx run -- node dist/main.js",
+    "test": "NODE_ENV=test jest",
+    "dev": "concurrently \"npx tsc --watch\" npm run sentry:sourcemaps \"dotenvx run -- nodemon -q dist/main.js\"",
+    "sentry:sourcemaps": "sentry-cli sourcemaps inject --org arfandy --project node-express ./dist && sentry-cli sourcemaps upload --org arfandy --project node-express ./dist"
   },
   "jest": {
     "transform": {
@@ -21,40 +22,46 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@prisma/client": "^5.11.0",
+    "@dotenvx/dotenvx": "^1.9.0",
+    "@prisma/client": "^5.18.0",
+    "@sentry/cli": "^2.33.1",
+    "@sentry/node": "^8.26.0",
+    "@sentry/profiling-node": "^8.26.0",
     "@types/supertest": "^6.0.2",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "dayjs": "^1.11.10",
+    "dayjs": "^1.11.13",
     "dotenv": "^16.4.5",
-    "express": "^4.19.1",
-    "helmet": "^6.2.0",
+    "express": "^4.19.2",
+    "gelf-pro": "^1.3.12",
+    "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
-    "supertest": "^6.3.4",
-    "uuid": "^9.0.1",
-    "winston": "^3.13.0",
-    "zod": "^3.22.4"
+    "supertest": "^7.0.0",
+    "uuid": "^10.0.0",
+    "winston": "^3.14.2",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@babel/core": "^7.24.3",
-    "@babel/preset-env": "^7.24.3",
-    "@babel/preset-typescript": "^7.24.1",
+    "@babel/core": "^7.25.2",
+    "@babel/preset-env": "^7.25.3",
+    "@babel/preset-typescript": "^7.24.7",
     "@jest/globals": "^29.7.0",
     "@types/bcrypt": "^5.0.2",
     "@types/body-parser": "^1.19.5",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/graylog2": "^0.2.5",
     "@types/jest": "^29.5.12",
     "@types/jsonwebtoken": "^9.0.6",
-    "@types/node": "^18.19.26",
-    "@types/uuid": "^9.0.8",
+    "@types/node": "^22.4.2",
+    "@types/uuid": "^10.0.0",
     "babel-jest": "^29.7.0",
     "concurrently": "^8.2.2",
     "jest": "^29.7.0",
-    "nodemon": "^3.1.0",
+    "nodemon": "^3.1.4",
     "prisma": "^5.18.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.4.3"
+    "typescript": "^5.5.4"
   }
 }
