feat: implement token management with refresh and revoke functionality, add health check endpoint

--- a/.example.env
+++ b/.example.env
@@ -1,5 +1,7 @@
 NODE_ENV=development
 PORT = 3001
+DISABLE_TOKEN_CLEANUP=false
 DATABASE_URL="postgresql://postgres:pass@localhost:5432/name"
 SECRET_KEY="Secret"
-SENTRY_DSN="dsn
+SENTRY_DSN="dsn"
+DISABLE_SENTRY=false
