--- a/package.json
+++ b/package.json
@@ -6,14 +6,13 @@
   "scripts": {
     "build": "npx tsc && npm run sentry:sourcemaps",
     "start": "dotenvx run -- node dist/main.js",
-    "test": "NODE_ENV=test jest",
+    "test": "dotenv -e .env.test -- jest",
+    "test:watch": "dotenv -e .env.test -- jest --watch",
+    "test:coverage": "dotenv -e .env.test -- jest --coverage",
     "dev": "concurrently \"npx tsc --watch\" npm run sentry:sourcemaps \"dotenvx run -- nodemon -q dist/main.js\"",
-    "sentry:sourcemaps": "sentry-cli sourcemaps inject --org arfandy --project node-express ./dist && sentry-cli sourcemaps upload --org arfandy --project node-express ./dist"
-  },
-  "jest": {
-    "transform": {
-      "^.+\\.[t|j]sx?$": "babel-jest"
-    }
+    "sentry:sourcemaps": "sentry-cli sourcemaps inject --org arfandy --project node-express ./dist && sentry-cli sourcemaps upload --org arfandy --project node-express ./dist",
+    "db:test:reset": "dotenv -e .env.test -- npx prisma db push --force-reset",
+    "db:test:seed": "dotenv -e .env.test -- ts-node prisma/seed.ts"
   },
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
@@ -23,19 +22,20 @@
   "license": "ISC",
   "dependencies": {
     "@dotenvx/dotenvx": "^1.9.0",
-    "@prisma/client": "^5.18.0",
+    "@prisma/client": "^6.5.0",
     "@sentry/cli": "^2.33.1",
-    "@sentry/node": "^8.26.0",
-    "@sentry/profiling-node": "^8.26.0",
+    "@sentry/node": "^9.12.0",
+    "@sentry/profiling-node": "^9.12.0",
     "@types/supertest": "^6.0.2",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "cron": "^4.1.4",
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "gelf-pro": "^1.3.12",
-    "helmet": "^7.1.0",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "supertest": "^7.0.0",
     "uuid": "^10.0.0",
@@ -50,6 +50,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/body-parser": "^1.19.5",
     "@types/cors": "^2.8.17",
+    "@types/cron": "^2.0.1",
     "@types/express": "^4.17.21",
     "@types/graylog2": "^0.2.5",
     "@types/jest": "^29.5.12",
@@ -58,9 +59,11 @@
     "@types/uuid": "^10.0.0",
     "babel-jest": "^29.7.0",
     "concurrently": "^8.2.2",
+    "dotenv-cli": "^8.0.0",
     "jest": "^29.7.0",
     "nodemon": "^3.1.4",
-    "prisma": "^5.18.0",
+    "prisma": "^6.5.0",
+    "ts-jest": "^29.3.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4"
   }
