--- a/.example.env
+++ b/.example.env
@@ -1,7 +1,21 @@
-NODE_ENV=development
+APP_NAME= short-url-nodejs
+NODE_ENV= development
 PORT = 3001
-DISABLE_TOKEN_CLEANUP=false
-DATABASE_URL="postgresql://postgres:pass@localhost:5432/name"
+VERSION = 0.0.1
 SECRET_KEY="Secret"
-SENTRY_DSN="dsn"
+COOKIE_SECRET="Secret-cookkie"
+ALLOWED_ORIGINS="http://localhost:3001,http://localhost:3002"
+
+# Database connection string
+DATABASE_URL="postgresql://postgres:password@localhost:5432/db_name"
+
+# Cleanup refresh-token
+DISABLE_TOKEN_CLEANUP=true
+
+# Sentry DSN for error tracking
+SENTRY_DSN=url_dsn
 DISABLE_SENTRY=false
+
+# API Logger Configuration
+ENABLE_LOGGER_API=false
+LOGGER_API_DOMAIN="https://logger-api.example.com"
