--- a/package.json
+++ b/package.json
@@ -26,14 +26,18 @@
     "@sentry/cli": "^2.33.1",
     "@sentry/node": "^9.12.0",
     "@sentry/profiling-node": "^9.12.0",
+    "@types/cookie-parser": "^1.4.8",
     "@types/supertest": "^6.0.2",
+    "axios": "^1.9.0",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "cron": "^4.1.4",
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-rate-limit": "^7.5.0",
     "gelf-pro": "^1.3.12",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
