--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -18,6 +18,7 @@ jobs:
           sarif_file: results.sarif
   test:
     runs-on: ubuntu-latest
+    name: Run Tests
     services:
       postgres:
         image: postgres
