--- a/.env.test
+++ b/.env.test
@@ -3,3 +3,4 @@ DATABASE_URL=postgresql://postgres:1234@localhost:5432/shorturl_test
 SECRET_KEY=test_secret_key
 DISABLE_SENTRY=true
 DISABLE_TOKEN_CLEANUP=true
+ALLOWED_ORIGINS=http://localhost:3000,http://localhost:3001,http://127.0.0.1:3000
